--- a/perception/object_recognition/detection/lidar_apollo_instance_segmentation/CMakeLists.txt
+++ b/perception/object_recognition/detection/lidar_apollo_instance_segmentation/CMakeLists.txt
@@ -13,6 +13,7 @@ if (CUDA_FOUND)
   )
   if (CUDA_VERBOSE)
     message("CUDA is available!")
+    message("CUDA toolkit root dir: ${CUDA_TOOLKIT_ROOT_DIR}")
     message("CUDA Libs: ${CUDA_LIBRARIES}")
     message("CUDA Headers: ${CUDA_INCLUDE_DIRS}")
   endif ()
